prusti-tests/tests/verify/ui/non-pure-function.stderr
error: [Prusti: invalid specification] use of impure function "get_true" in assertion is not allowed
  --> $DIR/non-pure-function.rs:14:12
   |
14 | #[requires(get_true() && !foo::get_false())]
   |            ^^^^^^^^^^

error: [Prusti: invalid specification] use of impure function "foo::get_false" in assertion is not allowed
  --> $DIR/non-pure-function.rs:14:27
   |
14 | #[requires(get_true() && !foo::get_false())]
   |                           ^^^^^^^^^^^^^^^^

error: [Prusti: invalid specification] use of impure function might be reachable.
  --> $DIR/non-pure-function.rs:14:12
   |
14 | #[requires(get_true() && !foo::get_false())]
   |            ^^^^^^^^^^
   |
   = help: Functions called from assertions should be marked as pure.

error: aborting due to 3 previous errors

